[package]
name = "blog-ogpgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-cache-reqwest = { version = "0.14.0", features = ["manager-moka"] }
once_cell = "1.19.0"
reqwest = "0.12.4"
reqwest-middleware = "0.3.1"
rocket = { version = "0.5.1", features = ["json"] }
rust-embed = "8.4.0"
skia-safe = { version = "0.75.0", features = ["vulkan", "textlayout"] }
